# terminal-devtool

./: .gitignore  Readme.md  docker-compose.yml  integration_test.sh  setup.sh  test_examples.sh
.github/: CODEOWNERS  auto_assign.yml
backend/: API.md  Dockerfile  go.mod  main.go  test_api.sh
backend/api/: handler.go  health.go
backend/media/: compress.go  processor.go  progress.go
backend/middleware/: middleware.go
frontend-cli/: Cargo.toml
frontend-cli/src/: cli.rs  client.rs  main.rs  models.rs  processor.rs
